--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GodMode Studioz — making good shit since 2009</title>
-    <!-- Google Fonts: Inter as close match to the original sans-serif -->
+    <title>GodMode Studioz — making first impressions since 2019</title>
+    <!-- Google Fonts: Inter (similar to original) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -12,10 +12,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <style>
+        /* RESET & BASE */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            cursor: none; /* hide default cursor */
         }
 
         body {
@@ -27,19 +29,50 @@
             overflow-x: hidden;
         }
 
-        /* red accent – exactly like original but using GodMode red */
+        /* CUSTOM CURSOR */
+        .cursor {
+            width: 20px;
+            height: 20px;
+            border: 2px solid #d32f2f;
+            border-radius: 50%;
+            position: fixed;
+            pointer-events: none;
+            z-index: 9999;
+            mix-blend-mode: difference;
+            transition: transform 0.2s ease;
+            transform: translate(-50%, -50%);
+        }
+        .cursor-follower {
+            width: 40px;
+            height: 40px;
+            border: 1px solid rgba(255,255,255,0.3);
+            border-radius: 50%;
+            position: fixed;
+            pointer-events: none;
+            z-index: 9998;
+            transition: transform 0.4s ease, width 0.3s, height 0.3s;
+            transform: translate(-50%, -50%);
+        }
+        a:hover ~ .cursor-follower,
+        button:hover ~ .cursor-follower {
+            width: 60px;
+            height: 60px;
+            border-color: #d32f2f;
+        }
+
+        /* RED ACCENT */
         .red {
             color: #d32f2f;
         }
 
-        /* containers */
+        /* CONTAINER */
         .container {
             max-width: 1400px;
             margin: 0 auto;
             padding: 0 40px;
         }
 
-        /* navigation – minimalist */
+        /* NAVIGATION */
         nav {
             display: flex;
             justify-content: space-between;
@@ -75,7 +108,7 @@
             color: #d32f2f;
         }
 
-        /* HERO – split screen, huge text */
+        /* HERO – split screen */
         .hero {
             padding: 80px 40px 60px;
             display: grid;
@@ -131,7 +164,7 @@
             display: block;
         }
 
-        /* first about section – exactly like original "About me" split */
+        /* FIRST ABOUT – two columns */
         .about-split {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -153,7 +186,7 @@
             max-width: 500px;
         }
 
-        /* what i do cards – duplicated exactly like original */
+        /* WHAT I DO – duplicated cards */
         .what-section {
             padding: 80px 40px;
             border-bottom: 1px solid rgba(255,255,255,0.08);
@@ -210,9 +243,7 @@
             line-height: 1.5;
         }
 
-        /* duplicated cards – we'll just repeat the same array in HTML */
-
-        /* experience timeline – two columns */
+        /* EXPERIENCE – timeline two columns */
         .exp-section {
             padding: 80px 40px;
             border-bottom: 1px solid rgba(255,255,255,0.08);
@@ -248,7 +279,7 @@
             color: #888;
         }
 
-        /* clients grid with funny descriptions */
+        /* CLIENTS – with funny descriptions */
         .clients-section {
             padding: 80px 40px;
             border-bottom: 1px solid rgba(255,255,255,0.08);
@@ -276,7 +307,7 @@
             line-height: 1.6;
         }
 
-        /* testimonials – overlapping style */
+        /* TESTIMONIALS – overlapping, funny */
         .testimonials {
             padding: 100px 40px;
             border-bottom: 1px solid rgba(255,255,255,0.08);
@@ -310,7 +341,7 @@
             color: #666;
         }
 
-        /* second about – exactly like "Hiding bad shit since 2009" */
+        /* SECOND ABOUT – playful */
         .about-second {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -329,7 +360,7 @@
             color: #bbb;
         }
 
-        /* footer */
+        /* FOOTER */
         footer {
             padding: 60px 40px 40px;
             display: grid;
@@ -367,7 +398,7 @@
             font-size: 0.9rem;
         }
 
-        /* responsive */
+        /* RESPONSIVE */
         @media (max-width: 900px) {
             .hero, .about-split, .exp-grid, .testimonials, .about-second, footer {
                 grid-template-columns: 1fr;
@@ -383,10 +414,17 @@
             .clients-grid {
                 grid-template-columns: 1fr;
             }
+            .nav-links {
+                display: none; /* could add mobile menu later */
+            }
         }
     </style>
 </head>
 <body>
+    <!-- CUSTOM CURSOR -->
+    <div class="cursor" id="cursor"></div>
+    <div class="cursor-follower" id="cursorFollower"></div>
+
     <nav>
         <div class="logo">GODMODE<span>STUDIOZ</span></div>
         <div class="nav-links">
@@ -397,29 +435,29 @@
         </div>
     </nav>
 
-    <!-- HERO -->
+    <!-- HERO SECTION (GodMode content) -->
     <div class="hero">
         <div class="hero-left">
-            making<br>good shit<br>since 2009
+            the first frame<br>they see<br>decides everything.
             <div class="small">India's first multimedia production studio</div>
         </div>
         <div class="hero-right">
-            <p>I’m a selectively skilled multimedia studio with strong focus on producing high quality & impactful first impressions.</p>
+            <p>Where a story’s first impression is engineered to last forever.</p>
             <div class="hero-stats">
+                <div>5+ <span>years</span></div>
                 <div>80+ <span>projects</span></div>
-                <div>5+ <span>languages</span></div>
-                <div>7 <span>clients</span></div>
+                <div>7 <span>lang</span></div>
             </div>
         </div>
     </div>
 
-    <!-- FIRST ABOUT (exactly like Minh's "About me") -->
+    <!-- FIRST ABOUT (exactly like "About me") -->
     <div class="about-split">
         <h2>About me</h2>
         <p>GodMode Studioz wasn't built to be another post-production vendor. It was built to change how Indian cinema tells its story to the world. We've been in the edit suite at 3am before a major release. We built this so that never has to happen again. India's most celebrated productions trust us because we don't just deliver assets. We protect the vision.</p>
     </div>
 
-    <!-- WHAT I DO section with duplicated cards (exact replication) -->
+    <!-- WHAT I DO – duplicated cards (GodMode services) -->
     <div class="what-section">
         <div class="section-header">
             <span class="eyebrow">What i do</span>
@@ -429,34 +467,34 @@
         <div class="cards-grid">
             <!-- first set -->
             <div class="card">
-                <h3>3D</h3>
-                <p>I can produce anything that my 16” laptop can render</p>
+                <h3>EDIT</h3>
+                <p>Trailers, teasers, promos – cutting until the story bleeds emotion.</p>
             </div>
             <div class="card">
-                <h3>Visual</h3>
-                <p>I search the internet for references and combine them to create my own work.</p>
+                <h3>MOTION</h3>
+                <p>2D/3D animations that make your titles dance and your posters move.</p>
             </div>
             <div class="card">
-                <h3>Motion</h3>
-                <p>I use fancy motion that makes my design more interesting than it actually is.</p>
+                <h3>DESIGN</h3>
+                <p>Key art, character posters, branding – the first visual handshake.</p>
             </div>
             <!-- duplicated set (identical) -->
             <div class="card">
-                <h3>3D</h3>
-                <p>I can produce anything that my 16” laptop can render</p>
+                <h3>AI</h3>
+                <p>Concept art, world-building, storyboards – assisted by machines, driven by humans.</p>
             </div>
             <div class="card">
-                <h3>Visual</h3>
-                <p>I search the internet for references and combine them to create my own work.</p>
+                <h3>DELIVER</h3>
+                <p>Credits, OTT masters, festival packages – the final polish.</p>
             </div>
             <div class="card">
-                <h3>Motion</h3>
-                <p>I use fancy motion that makes my design more interesting than it actually is.</p>
+                <h3>STRATEGY</h3>
+                <p>Campaign planning, narrative positioning – the invisible architecture.</p>
             </div>
         </div>
     </div>
 
-    <!-- EXPERIENCE TIMELINE -->
+    <!-- EXPERIENCE (GodMode timeline) -->
     <div class="exp-section">
         <div class="section-header">
             <span class="eyebrow">Experience</span>
@@ -501,7 +539,7 @@
         </div>
     </div>
 
-    <!-- CLIENTS with humorous descriptions (exact tone) -->
+    <!-- CLIENTS (GodMode's partners with funny descriptions) -->
     <div class="clients-section">
         <div class="section-header">
             <span class="eyebrow">Clients</span>
@@ -536,7 +574,7 @@
         </div>
     </div>
 
-    <!-- TESTIMONIALS – exactly like original: overlapping, funny -->
+    <!-- TESTIMONIALS (fake funny quotes) -->
     <div class="testimonials">
         <div class="testimonial">
             <div class="quote">“He’s terrible, but it’s his birthday so I’d say something nice”</div>
@@ -555,9 +593,9 @@
         </div>
     </div>
 
-    <!-- SECOND ABOUT – exactly like "Hiding bad shit since 2009" -->
+    <!-- SECOND ABOUT – playful -->
     <div class="about-second">
-        <h2>Hiding<br>bad shit<br>since 2009</h2>
+        <h2>Hiding<br>bad edits<br>since 2019</h2>
         <p>A visual studio – with skills that haven't been replaced by A.I (yet) – making good shit only if the paycheck is equally good.</p>
     </div>
 
@@ -583,11 +621,29 @@
         </div>
     </footer>
 
-    <!-- GSAP ANIMATIONS (scroll triggers, fades, etc.) -->
+    <!-- GSAP ANIMATIONS -->
     <script>
         gsap.registerPlugin(ScrollTrigger);
 
-        // animate cards on scroll
+        // Custom cursor movement
+        const cursor = document.getElementById('cursor');
+        const cursorFollower = document.getElementById('cursorFollower');
+        document.addEventListener('mousemove', (e) => {
+            gsap.to(cursor, { duration: 0.1, x: e.clientX, y: e.clientY });
+            gsap.to(cursorFollower, { duration: 0.3, x: e.clientX, y: e.clientY });
+        });
+
+        // Hover effect for links/buttons
+        document.querySelectorAll('a, button').forEach(el => {
+            el.addEventListener('mouseenter', () => {
+                gsap.to(cursorFollower, { duration: 0.3, width: 60, height: 60, borderColor: '#d32f2f' });
+            });
+            el.addEventListener('mouseleave', () => {
+                gsap.to(cursorFollower, { duration: 0.3, width: 40, height: 40, borderColor: 'rgba(255,255,255,0.3)' });
+            });
+        });
+
+        // Scroll animations
         gsap.utils.toArray('.card, .client-card, .testimonial').forEach((el, i) => {
             gsap.from(el, {
                 scrollTrigger: {
@@ -603,19 +659,6 @@
             });
         });
 
-        // split hero text animation
-        gsap.from('.hero-left', {
-            scrollTrigger: {
-                trigger: '.hero',
-                start: 'top top',
-                end: 'bottom top',
-                scrub: 1
-            },
-            y: 100,
-            opacity: 0.5
-        });
-
-        // timeline items stagger
         gsap.from('.exp-item', {
             scrollTrigger: {
                 trigger: '.exp-section',
@@ -627,7 +670,6 @@
             stagger: 0.1
         });
 
-        // second about text animation
         gsap.from('.about-second h2', {
             scrollTrigger: {
                 trigger: '.about-second',
